[package]
name = "stackcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
glob = "0.3.1"
regex = "1.7.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
serde_yaml = "0.9.16"
